--- a/atividades_07.08/atividade2/atividade2.html
+++ b/atividades_07.08/atividade2/atividade2.html
@@ -3,59 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>1ªAtividade</title>
-    <link rel="stylesheet" href="/atividades_07.08/atividade1.css" />
+    <title>2ªAtividade</title>
+    <link rel="stylesheet" href="/atividades_07.08/atividade2/atividade2.css" />
   </head>
   <body>
-    <form action="atividade1.php" method="post">
+    <form action="/atividades_07.08/atividade2/atividade2.php" method="get">
       <fieldset>
-        <legend>Dados</legend>
-        <p>
-          <label for="firstName">Primeiro Nome:</label>
-          <br />
-          <input
-            type="text"
-            name="firstName"
-            id="firstName"
-            placeholder="Digite Aqui..."            
-            required
-          />
-        </p>
-        <p>
-          <label for="secondName">Segundo Nome:</label>
-          <br />
-          <input
-            type="text"
-            name="secondName"
-            id="secondName"
-            placeholder="Digite Aqui..."            
-            required
-          />
-        </p>
-        <p>
-          <label for="idade">Idade:</label>
-          <br />
+        <legend>Digite abaixo sua idade</legend>
+        <p id="inpID">
           <input
             type="number"
             name="idade"
             id="idade"
-            placeholder="Ex.:20"                       
-            required
-          />
-        </p>
-        <p>
-          <label for="city">Cidade Natal:</label>
-          <br />
-          <input
-            type="text"
-            name="city"
-            id="city"
-            placeholder="Digite Aqui..."            
+            placeholder="Ex.:20"
             required
           />
         </p>
         <p id="btn">
-            <button type="submit">Entrar</button>
+          <button type="submit">Verificar</button>
         </p>
       </fieldset>
     </form>
