--- a/1ª/atividades_07.08/atividade2/atividade2.html
+++ b/1ª/atividades_07.08/atividade2/atividade2.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>2ªAtividade</title>
-    <link rel="stylesheet" href="/atividades_07.08/atividade2/atividade2.css" />
+    <link
+      rel="stylesheet"
+      href="/1ª/atividades_07.08/atividade2/atividade2.css"
+    />
   </head>
   <body>
-    <form action="/atividades_07.08/atividade2/atividade2.php" method="get">
+    <form action="/1ª/atividades_07.08/atividade2/atividade2.php" method="get">
       <fieldset>
         <legend>Digite abaixo sua idade</legend>
         <p id="inpID">
