--- a/1ª/atividades_07.08/atividade3/atividade3.html
+++ b/1ª/atividades_07.08/atividade3/atividade3.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>3ªAtividade</title>
-    <link rel="stylesheet" href="/atividades_07.08/atividade3/atividade3.css" />
+    <link rel="stylesheet" href="/1ª/atividades_07.08/atividade3/atividade3.css" />
   </head>
   <body>
-    <form action="/atividades_07.08/atividade3/atividade3.php" method="get">
+    <form action="/1ª/atividades_07.08/atividade3/atividade3.php" method="get">
       <fieldset>
         <legend>Digite a tabuada que deseja à baixo!</legend>
         <p>          
