--- a/1ª/atividades_07.08/atividade1/atividade1.html
+++ b/1ª/atividades_07.08/atividade1/atividade1.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>1ªAtividade</title>
-    <link rel="stylesheet" href="/atividades_07.08/atividade1/atividade1.css" />
+    <link rel="stylesheet" href="/1ª/atividades_07.08/atividade1/atividade1.css" />
   </head>
   <body>
-    <form action="/atividades_07.08/atividade1/atividade1.php" method="post">
+    <form action="/1ª/atividades_07.08/atividade1/atividade1.php" method="post">
       <fieldset>
         <legend>Dados</legend>
         <p>
