--- a/1ª/aulas/aula4.html
+++ b/1ª/aulas/aula4.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="/form_aula4/aula4.css">
+    <link rel="stylesheet" href="/1ª/form_aula4/aula4.css">
 </head>
 
 <body>
-    <form action="/form_aula4/autenticacao.php" method="post">
+    <form action="/1ª/form_aula4/autenticacao.php" method="post">
         <fieldset>
             <legend>Login</legend>
             <p>
