Até à atividade 7 das atividades 12/08, concluído!

--- a/atividades_12.08/atividade2/function_two.html
+++ b/atividades_12.08/atividade2/function_two.html
@@ -18,14 +18,14 @@
         </p>
         <p>
           <label for="sf">Salário Fixo:</label>
-          <div id="rs">
+          <div class="rs">
             <span>R$</span>
             <input type="number" name="sf" id="sf" placeholder="1600" required>
           </div>
         </p>
         <p>
           <label for="tv">Total Vendas:</label>
-          <div id="rs">
+          <div class="rs">
             <span>R$</span>
             <input type="number" name="tv" id="tv" placeholder="10000" required>
           </div>
